--- a/backstage.yaml
+++ b/backstage.yaml
@@ -4,7 +4,7 @@ metadata:
   name: GITExample
   description: example.com
   annotations:
-    github.com/project-slug: freshdesk/helpkit
+    github.com: freshdesk/helpkit
 spec:
   type: service
   lifecycle: experimental
