--- a/backstage.yaml
+++ b/backstage.yaml
@@ -5,6 +5,7 @@ metadata:
   description: example.com
   annotations:
     github.com/project-slug: freshdesk/helpkit
+    backstage.io/techdocs-ref: url:https://github.com/backstage/backstage/tree/master
 spec:
   type: service
   lifecycle: experimental
